third_party/WebKit/Source/WebCore/platform/graphics/ca/win/WKCACFViewLayerTreeHost.cpp
@@ -32,6 +32,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "PlatformCALayer.h"
 #include "SoftLinking.h"
 #include <wtf/CurrentTime.h>
+#include <wtf/Threading.h>
 
 typedef struct _CACFLayer* CACFLayerRef;
 
@@ -105,6 +106,12 @@ void WKCACFViewLayerTreeHost::contextDidChangeCallback(WKCACFViewRef view, void*
 
 void WKCACFViewLayerTreeHost::contextDidChange()
 {
+    // This should only be called on a background thread when no changes have actually 
+    // been committed to the context, eg. when a video frame has been added to an image
+    // queue, so return without triggering animations etc.
+    if (!isMainThread())
+        return;
+
     // Tell the WKCACFView to start rendering now that we have some contents to render.
     updateViewIfNeeded();
 
